# DrinkShelf

./: .env.example  .gitignore  DESIGN_GUIDELINES.md  DEVELOPMENT_SETUP.md  Dockerfile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  TECHNICAL_SPECIFICATIONS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/routes/: auth.py  bottles.py  collections.py  search.py  tasting_notes.py  users.py
app/crud/: __init__.py  bottle.py  collection.py  tasting_note.py
app/database/: __init__.py  base.py  session.py
app/models/: __init__.py  bottle.py  collection.py  tasting_note.py  user.py
app/schemas/: __init__.py  bottle.py  collection.py  tasting_note.py  user.py
app/services/: __init__.py  ai_service.py  review_service.py  search_service.py  search_tests.py
app/utils/: security.py
docs/: 05_IMPLEMENTATION_ROADMAP.md  07_PHASE_1_2_AUTHENTICATION.md  08_PHASE_2_COMPLETE.md  09_PHASE_2_5_COMPLETE.md  10_SETUP_COMPLETE.md  README.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/bottles/: page.tsx
frontend/app/collections/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: BottleCard.tsx  ClientLayout.tsx  Navbar.tsx
migrations/: env.py  script.py.mako
tests/: __init__.py  conftest.py  test_auth.py  test_bottles.py  test_tasting_notes.py
(+4 files in other folders)
